[gd_scene load_steps=30 format=2]

[ext_resource path="res://art/butterfly.png" type="Texture" id=1]
[ext_resource path="res://scripts/battleMode/BattleModeEnemy.gd" type="Script" id=2]
[ext_resource path="res://scenes/Bullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/HitBox.gd" type="Script" id=4]
[ext_resource path="res://scripts/HurtBox.gd" type="Script" id=5]
[ext_resource path="res://scripts/enemyMovement.gd" type="Script" id=6]
[ext_resource path="res://art/big explosion.png" type="Texture" id=7]

[sub_resource type="CircleShape2D" id=14]
radius = 16.0

[sub_resource type="Curve2D" id=17]
_data = {
"points": PoolVector2Array( 0.471937, 0.707906, -0.471937, -0.707906, -34, -1, -9.43874, 4.01147, 9.43874, -4.01147, -25, -13, -11.7984, -7.31503, 11.7984, 7.31503, 24, -13, 12.0344, -5.89921, -12.0344, 5.89921, 23, 10, 9.43874, 4.71937, -9.43874, -4.71937, -24, 10, -0.0848745, 0.898732, 0.0848745, -0.898732, -34, -1 )
}

[sub_resource type="CircleShape2D" id=15]
radius = 16.0312

[sub_resource type="CircleShape2D" id=16]
radius = 16.0312

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 7 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 7 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 7 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 7 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 96, 32, 32, 32 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 20 ), SubResource( 21 ), SubResource( 21 ), SubResource( 22 ), SubResource( 22 ), SubResource( 22 ), SubResource( 22 ), SubResource( 22 ) ],
"loop": false,
"name": "die",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 3.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "moving",
"speed": 5.0
} ]

[node name="BattleModeEnemy" type="KinematicBody2D" groups=["enemies"]]
script = ExtResource( 2 )
bulletScene = ExtResource( 3 )
attackPatternFile = "res://scripts/attackPatternJsonData/butterflyAttack.json"

[node name="ApproachTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="bulletSpawnTimer" type="Timer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 14 )

[node name="bulletSpawnLocationY" type="Position2D" parent="."]
position = Vector2( 0, 35 )

[node name="enemyMovement" type="Path2D" parent="."]
position = Vector2( -1, 4 )
curve = SubResource( 17 )
script = ExtResource( 6 )

[node name="PathFollow2D" type="PathFollow2D" parent="enemyMovement"]
position = Vector2( -34, -1 )
rotation = -0.501648
rotate = false

[node name="HurtBox" type="Area2D" parent="enemyMovement/PathFollow2D"]
position = Vector2( 3.8147e-06, 0 )
rotation = 0.501648
collision_layer = 0
collision_mask = 64
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemyMovement/PathFollow2D/HurtBox"]
shape = SubResource( 15 )

[node name="HitBox" type="Area2D" parent="enemyMovement/PathFollow2D"]
position = Vector2( 3.8147e-06, 0 )
rotation = 0.501648
collision_layer = 16
collision_mask = 0
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemyMovement/PathFollow2D/HitBox"]
shape = SubResource( 16 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="enemyMovement/PathFollow2D"]
position = Vector2( 3.8147e-06, 0 )
rotation = 0.501648
frames = SubResource( 13 )
animation = "die"
frame = 10
playing = true

[connection signal="timeout" from="ApproachTimer" to="." method="_on_ApproachTimer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="timeout" from="bulletSpawnTimer" to="." method="_on_bulletSpawnTimer_timeout"]
